# Multisig

./: Anchor.toml  Cargo.toml  README.md  Todo.md
programs/multisig/: Cargo.toml
programs/multisig/src/: lib.rs
programs/multisig/src/instructions/: add_asset.rs  add_asset_member.rs  add_asset_mint.rs  add_asset_token.rs  add_group_member.rs  add_member.rs  add_member_in_reset_mode.rs  change_asset_config.rs  change_config.rs  change_group_config.rs  close_asset_member.rs  close_config_proposal.rs  close_config_vote_record.rs  close_emergency_reset_proposal.rs  close_emergency_reset_vote_record.rs  close_normal_proposal.rs  close_normal_vote_record.rs  close_proposal.rs  close_proposal_transaction_instruction.rs  close_vote_record.rs  create_config_proposal.rs  create_emergency_reset_proposal.rs  create_group.rs  create_normal_proposal.rs  create_proposal.rs  create_proposal_instruction.rs  execute_emergency_reset.rs  execute_transaction.rs  exit_pause_mode.rs  mod.rs  remove_asset_member.rs  remove_group_member.rs  remove_member.rs  remove_member_in_reset_mode.rs  vote_on_config_proposal.rs  vote_on_emergency_reset_proposal.rs  vote_on_normal_proposal.rs  vote_proposal.rs
programs/multisig/src/state/: asset.rs  constants.rs  error.rs  group.rs  member.rs  mod.rs  proposal.rs  vote.rs
programs/multisig/src/utils/: fractional_threshold.rs
programs/multisig/tests/: To-do.md  add_asset_member.rs  add_asset_mint.rs  add_asset_token.rs  add_group_member.rs  change_asset_config.rs  change_group_config.rs  clean_up_asset_member.rs  close_config_proposal.rs  close_config_vote_record.rs  close_normal_proposal.rs  close_normal_vote_record.rs  close_proposal_transaction.rs  create_config_proposal.rs  create_group.rs  create_normal_proposal.rs  create_proposal_transaction.rs  emergency_reset.rs  execute_proposal_transaction.rs  integration_config.rs  integration_normal.rs  minimum_timelock.rs  pause_mode.rs  remove_asset_member.rs  remove_group_member.rs  state_logic.rs  vote_on_config_proposal.rs  vote_on_normal_proposal.rs
programs/multisig/tests/common/: create_assets.rs  mod.rs  utils.rs
programs/multisig_test_helper/: Cargo.toml
programs/multisig_test_helper/src/: lib.rs
programs/tokens/: Cargo.toml
programs/tokens/src/: lib.rs
programs/tokens/src/instructions/: add_asset.rs  add_member.rs  change_config.rs  create_group.rs  create_proposal.rs  create_proposal_instruction.rs  execute_transaction.rs  mod.rs  remove_member.rs  vote_proposal.rs
programs/tokens/src/state/: asset.rs  constants.rs  error.rs  group.rs  member.rs  mod.rs  proposal.rs  vote.rs
programs/tokens/src/utils/: fractional_threshold.rs  mod.rs
sdk/: Cargo.toml  To-do.md
sdk/src/: lib.rs
sdk/src/instructions/: create_group.rs  mod.rs
sdk/tests/: sdk.rs
