[workspace]
members = [
    "programs/*", 
    "sdk"
]
resolver = "2"

[patch.crates-io]
multisig = { path = "programs/multisig" }
multisig-sdk = { path = "sdk" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
