[package]
name = "multisig"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
test-helpers = []
no-idl = []
no-log-ix-name = []
#idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]



[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"

[dev-dependencies]
anyhow = "1.0.100"
litesvm = "0.6.1"
rand = "0.9.2"
solana-sdk = "2.2.1"
spl-associated-token-account = "6.0.0"
spl-token = "7.0"


