[package]
name = "tokens"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokens"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []



[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"

[dev-dependencies]
mollusk-svm = "0.5.1"
mollusk-svm-programs-token = "0.5.1"
solana-sdk = "2.3.0"
spl-token = "8.0.0"

